# azure-ai-agent-service-quickstart

./: .env.example  .gitignore  README.md  pyproject.toml  quickstart.py  run_with_azure_sdk.py  run_with_openai_sdk.py
src/: mcp_quickstart_disable_approval.py  mcp_quickstart_enable_approval.py
